配置@为根路径

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>运营活动配置平台</title>
+    <title>太原师范学院计算机系活动管理系统</title>
   </head>
   <body>
     <noscript>
