--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>太原师范学院计算机系活动管理系统</title>
+  <title>活动管理系统</title>
+  <!--<title>太原师范学院计算机系活动管理系统</title>-->
   <style type="text/css">
     @keyframes lds-cube {
       0% {
